src/main/java/com/example/fas/repositories/services/serviceImpl/exceptions/user/invalid/DayInvalidException.java
package com.example.fas.repositories.services.serviceImpl.exceptions.user.invalid;

public class DayInvalidException extends RuntimeException {
    public DayInvalidException(String message) {
        super(message);
    }
}
